更改函数名称，添加十大流通股东信息获取功能

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 # Folders
 */__pycache__/*
-efinance/__pycache__/*
 efinance.egg-info
 build
 dist
-# Files
 
+# Files
 *.pyc
 *.csv
 *.xlsx
+*.zip
+*.ipynb
